--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "name": "rafael.oliveira/tiaraju",
+    "version": "1.0.0",
     "autoload": {
         "psr-4": {
             "App\\": "app"
@@ -11,5 +12,7 @@
             "email": "raffaell_mendez@hotmail.com"
         }
     ],
-    "require": {}
+    "require": {
+        "monolog/monolog": "^3.8"
+    }
 }
