Implementado as variáeis de ambiente.

--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         }
     ],
     "require": {
-        "monolog/monolog": "^3.8"
+        "monolog/monolog": "^3.8",
+        "vlucas/phpdotenv": "^5.6"
     }
 }
