Teste ignorar logs

--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,9 @@
 /vendor/
 
 # Ignorar todos os arquivos dentro do diretório logs
-/logs/
+logs/*
 
 # # Exceto o arquivo .empty
-# !logs/.empty
+!logs/.empty
 
 .env
