Recuperar detalhes do usuário no banco de dados

--- a/.env.exemple
+++ b/.env.exemple
@@ -1,6 +1,17 @@
 # Informações do projeto
 APP_NAME=Tiaraju
-VERSION=1.0.0
+APP_VERSION=1.0.0
+APP_TIMEZONE=America/Sao_Paulo
+
+# Ambiente: development
+# Ambiente: test
+# Ambiente: homologation
+# Ambiente: production
+# Ambiente: maintenance
+APP_ENV=development
+
+# URL do projeto
+URL_ADM=http://localhost/tiaraju/
 
 # E-mail do administrador
 EMAIL_ADM=raffaell_mendez@hotmail.com
@@ -11,5 +22,4 @@ DB_USER=root
 DB_PASS=
 DB_NAME=tiaraju
 DB_PORT=3306
-
 
