--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
     "require": {
         "monolog/monolog": "^3.8",
         "vlucas/phpdotenv": "^5.6",
-        "robmorgan/phinx": "^0.16.6"
+        "robmorgan/phinx": "^0.16.6",
+        "rakit/validation": "^1.4"
     }
 }
