Implementado a classe Enviar e-mail com PHP

--- a/.env.exemple
+++ b/.env.exemple
@@ -2,6 +2,8 @@
 APP_NAME=Tiaraju
 APP_VERSION=1.0.0
 APP_TIMEZONE=America/Sao_Paulo
+APP_LOCALE=pt-BR
+
 
 # Ambiente: development
 # Ambiente: test
@@ -15,6 +17,8 @@ URL_ADM=http://localhost/tiaraju/
 
 # E-mail do administrador
 EMAIL_ADM=raffaell_mendez@hotmail.com
+EMAIL_TI=chamados@tiaraju.com.br
+NAME_EMAIL_TI=Suporte-Tiaraju
 
 # Credenciais do banco de dados
 DB_HOST=localhost
@@ -23,3 +27,8 @@ DB_PASS=
 DB_NAME=tiaraju
 DB_PORT=3306
 
+# Credenciais do servidor de email
+MAIL_HOST=sandbox.smtp.mailtrap.io
+MAIL_USERNAME=e689c0a95d1946
+MAIL_PASSWORD=a947ad6737379d
+MAIL_PORT=2525
