--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "monolog/monolog": "^3.8",
         "vlucas/phpdotenv": "^5.6",
         "robmorgan/phinx": "^0.16.6",
-        "rakit/validation": "^1.4"
+        "rakit/validation": "^1.4",
+        "phpmailer/phpmailer": "^6.9"
     }
 }
