--- a/.env.exemple
+++ b/.env.exemple
@@ -32,3 +32,4 @@ MAIL_HOST=sandbox.smtp.mailtrap.io
 MAIL_USERNAME=e689c0a95d1946
 MAIL_PASSWORD=a947ad6737379d
 MAIL_PORT=2525
+MAIL_ENCRYPTION=PHPMailer::ENCRYPTION_STARTTLS
